--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="info">
                 <p class="price1">$69.999</p>
                 <p class="description1">Sudadera de Mario Bros, en tela supernailon, tres piezas, bordada en hilo y estampada.</p>
-                <p class="sizes1">Tallas disponibles: 2,4,6,8,10,12.</p>
+                <p class="sizes1">Tallas disponibles: 2-12.</p>
             </div>
         </div>
         <div class="product">
-            <img src="C:\Users\sergi\Downloads\SOSAKIDS (1)\SOSAKIDS\profetaaaaaaa.github.io\Imagenes\Chaqueta1.png" alt="Chaqueta 1">
+            <img src="Chaqueta1.png" alt="Chaqueta 1">
             <div class="info">
                 <p class="price2">$69.999</p>
                 <p class="description2">Chaqueta de More Love enguatada, peluche en la capota , bordada en hilo con aplique brillante.</p>
