--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section class="products">
         <div class="product">
-            <img src="C:\SOSAKIDS\Imagenes\Sudadera1.png" alt="Sudadera 1">
+            <img src="C:\Users\sergi\Downloads\SOSAKIDS (1)\SOSAKIDS\profetaaaaaaa.github.io\Imagenes\Sudadera1.png" alt="Sudadera 1">
             <div class="info">
                 <p class="price1">$69.999</p>
                 <p class="description1">Sudadera de Mario Bros, en tela supernailon, tres piezas, bordada en hilo y estampada.</p>
