--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="product">
-            <img src="Chaqueta1.png" alt="Chaqueta 1">
+            <img src="Imagenes/Chaqueta1.png" alt="Chaqueta 1">
             <div class="info">
                 <p class="price2">$69.999</p>
                 <p class="description2">Chaqueta de More Love enguatada, peluche en la capota , bordada en hilo con aplique brillante.</p>
